forwarding/err/UC_C/VER6.err
In file included from /usr/include/c++/5/bits/stl_pair.h:59:0,
                 from /usr/include/c++/5/bits/stl_algobase.h:64,
                 from /usr/include/c++/5/bits/char_traits.h:39,
                 from /usr/include/c++/5/ios:40,
                 from /usr/include/c++/5/ostream:38,
                 from /usr/include/c++/5/iostream:39,
                 from src/UC_C.cpp:1:
/usr/include/c++/5/bits/move.h: In instantiation of ‘constexpr _Tp&& std::forward(typename std::remove_reference<_From>::type&&) [with _Tp = const A&; typename std::remove_reference<_From>::type = const A]’:
src/UC_C.cpp:22:37:   required from ‘C<T>::C(U&&) [with U = Awrap; <template-parameter-2-2> = void; T = const A&]’
src/UC_C.cpp:54:29:   required from here
/usr/include/c++/5/bits/move.h:89:7: error: static assertion failed: template argument substituting _Tp is an lvalue reference type
       static_assert(!std::is_lvalue_reference<_Tp>::value, "template argument"
       ^
